spl: Support SPL_SIZE_LIMIT without SPL_MAX_SIZE
Signed-off-by: Samuel Holland <samuel@sholland.org>

--- a/scripts/Makefile.spl
+++ b/scripts/Makefile.spl
@@ -197,6 +197,10 @@ LDPPFLAGS += \
 # the scripts between SPL, TPL and VPL.
 ifneq ($(CONFIG_$(SPL_TPL_)MAX_SIZE),0x0)
 LDPPFLAGS += -DIMAGE_MAX_SIZE=$(CONFIG_$(SPL_TPL_)MAX_SIZE)
+else
+ifneq ($(CONFIG_$(SPL_TPL_)SIZE_LIMIT),0x0)
+LDPPFLAGS += -DIMAGE_MAX_SIZE=$(CONFIG_$(SPL_TPL_)SIZE_LIMIT)
+endif
 endif
 ifneq ($(CONFIG_$(SPL_TPL_)TEXT_BASE),)
 LDPPFLAGS += -DIMAGE_TEXT_BASE=$(CONFIG_$(SPL_TPL_)TEXT_BASE)
