--- a/dts/Makefile
+++ b/dts/Makefile
@@ -44,7 +44,7 @@ arch-dtbs:
 	$(Q)$(MAKE) $(build)=arch/$(ARCH)/dts dtbs
 
 ifeq ($(CONFIG_SPL_BUILD),y)
-obj-$(CONFIG_OF_EMBED) := dt-spl.dtb.o
+obj-$(CONFIG_SPL_OF_EMBED) := dt-spl.dtb.o
 # support "out-of-tree" build for dtb-spl
 $(obj)/dt-spl.dtb.o: $(obj)/dt-spl.dtb.S FORCE
 	$(call if_changed_dep,as_o_S)
