bl808: Add SPL support
Signed-off-by: Samuel Holland <samuel@sholland.org>

--- a/board/bouffalo/bl808/Kconfig
+++ b/board/bouffalo/bl808/Kconfig
@@ -20,6 +20,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select BOARD_EARLY_INIT_F
 	select DM_GPIO if GPIO
 	select GENERIC_RISCV
+	select SUPPORT_SPL
 	imply BFLB_SERIAL
 	imply RISCV_TIMER
 
